fixed vertical align for images

--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -14,7 +14,6 @@
 }
 
 .portfolio-main-topic {
-
     h4 {
         margin: 0;
     }
@@ -23,13 +22,12 @@
 .project-details {
     display: flex;
     flex-direction: column;
-    gap: 0;   
+    gap: 0;
 
     .img-container {
         overflow: hidden;
 
         &:hover {
-
             img {
                 transform: scale(1.2);
             }
@@ -39,9 +37,10 @@
             max-width: 100%;
             height: auto;
             object-fit: cover;
+            vertical-align: bottom;
             transition: transform 250ms ease;
         }
-    }   
+    }
 
     .projects-description {
         background-color: white;
